Changes in <next version>:
 * Update to PyQt5 and Qt5
 * Use Ghostscript to write EPS/PS formats
 * Use pyinstaller for MacOS builds instead of py2app
 * Windows build requires Windows 7 minimum
 * MacOS build requires MacOS 10.10 minimum
 * Move to using Sphinx for documentation
 * Add Makefile for documentation and remove build script
 * Use isfinite() on FreeBSD

Changes in 1.27:
 * New FITS import code and user interface, allowing much more
   flexible and convenient FITS importing
 * Fix half pixel error in linear WCS FITS support
 * Save custom definitions after importing data, to allow customs
   to depend on datasets.
 * Add preference for loading translation file
 * Fix logical errors in transparency in image widget
 * If cannot find translation or plugin, do not end app after showing error
 * Fix for Python 3 for reloading datasets

Changes in 1.26.1:
 * Change homepage in program to new site https://veusz.github.io/
 * Change new version checking to use veusz.github.io

Changes in 1.26:
 * Add color themes and automatic coloring of widgets
 * Custom color definitions
 * Improved custom definition dialog box
 * Fix loading translator via command line
 * Show horizontal error lines/fills in key
 * Use iMinuit if available for fitting
 * Fix for dataset plugins returning nD datasets
 * Add editable automatic axis range, including support for shrinking
   range (-X%), percentage ranges (X-Y%) and limits (<X% and >Y%)
 * Fix for key if invalid dataset
 * For log scaling on image widget, show invalid values as being transparent

Bug fixes in 1.25.1:
 * Fix 2D dataset expressions
 * Fix 2D X,Y,Z dataset expressions
 * Better error checking in Gnuplot import plugin
 * Catch non-single character delimiters for 2D CSV import
 * Fix SETTING(), BASENAME(), FILENAME() and DATA() in function evaluation
 * More self tests

Changes in 1.25:
 * Add n-dimensional dataset support
 * Add GetColormap command to return RGBA values