@@ -32,8 +32,7 @@ all: man manual
 %.man.txt: %.1
 	MANWIDTH=76 man ./$< > $@
 
-man: man-page/veusz.1 man-page/veusz_listen.1 \
-	man-page/veusz.man.txt man-page/veusz_listen.man.txt
+man: man-page/veusz.1 man-page/veusz.man.txt
 
 ############################################################################
 # manual
@@ -53,4 +52,5 @@ manual: manual/html/index.html manual/pdf/veusz.pdf
 ############################################################################
 
 clean:
-	rm -rf manual/html manual/pdf manual/latexpdf man-page/*.1 man-page/*.man.txt
+	rm -rf manual/html manual/pdf manual/latexpdf \
+		man-page/*.1 man-page/*.man.txt
