@@ -1,48 +1,0 @@
-=head1 NAME
-
-veusz_listen - command-line interface to the B<Veusz> plotting application.
-
-=head1 SYNOPSIS
-
-veusz_listen [F<WindowTitle>]...
-
-=head1 DESCRIPTION
-
-B<Veusz> is a scientific plotting and graphing
-package. B<veusz_listen> provides a command line interface to its
-scripting interface.
-
-B<veusz_listen> opens a new window (with an optional window title)
-and listens to stdin. It executes Veusz scripting commands, writing
-any output to stdout.
-
-B<veusz_listen> is now deprecated. Please use B<veusz --listen>
-instead.
-
-=head1 SEE ALSO
-
-veusz(1)
-
-=head1 BUGS
-
-Please report bugs at https://github.com/veusz/veusz/issues
-
-=head1 AUTHORS
-
-B<Veusz> was written by Jeremy Sanders <jeremy@jeremysanders.net>.
-
-This manual page was written by Jeremy Sanders <jeremy@jeremysanders.net>.
-
-=head1 COPYRIGHT
-
-Copyright (C) 2003-2017 Jeremy Sanders <jeremy@jeremysanders.net>.
-
-This program is free software; you can redistribute it and/or modify it
-under the terms of the GNU General Public License as published by the
-Free Software Foundation; either version 2, or (at your option) any
-later version.
-
-On Debian GNU/Linux systems, the complete text of the GNU General
-Public License can be found in `/usr/share/common-licenses/GPL'.
-
-=cut
