@@ -148,12 +148,11 @@ into your Applications directory.
   may save space in repositories to separate out the helpers
   sub-module.
 
-- Veusz includes man pages in Documents/man-page/veusz.1 and
-  Documents/man-page/veusz_listen.1
-  These are not automatically installed by distutils.
+- Veusz includes a man page in Documents/man-page/veusz.1
+  This are not automatically installed by distutils.
 
 - A manual in HTML and PDF format can be found in Documents/manual/
-  This and the the man pages can be regenerated using the Makefile in
+  This and the the man page can be regenerated using the Makefile in
   Documents, if Sphinx is installed (make clean; make).
 
 - Veusz also includes freedesktop mime, desktop and appdata files in
