@@ -19,6 +19,9 @@ Changes in <next version>:
  * Windows build requires Windows 7 minimum
  * MacOS build requires MacOS 10.10 minimum
  * Move to using Sphinx for documentation
+ * Add Makefile for documentation and remove build script
+ * Use isfinite() on FreeBSD
+ * Drop old veusz_listen script in favour of veusz --listen
 
 Features of package:
  Plotting features:
